--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,8 +17,11 @@ body {
 
 body::before {
 	content: "";
+
 	opacity: 60%;
+
 	background-color: #002855;
+
 	position: fixed;
 	top: 0;
 	right: 0;
@@ -29,16 +32,21 @@ body::before {
 .form {
 	width: 920px;
 	height: 820px;
+
 	background-color: #fff;
+
 	box-shadow: 0px 0px 36px 4px rgba(44, 22, 29, 0.3);
+
 	border-radius: 30px;
 	-webkit-border-radius: 30px;
 	-moz-border-radius: 30px;
 	-ms-border-radius: 30px;
 	-o-border-radius: 30px;
+
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+
 	position: absolute;
 	top: 50%;
 	left: 50%;
@@ -47,7 +55,6 @@ body::before {
 	-moz-transform: translate(-50%, -50%);
 	-ms-transform: translate(-50%, -50%);
 	-o-transform: translate(-50%, -50%);
-	z-index: 1;
 }
 /* form__top */
 .form__top {
@@ -58,16 +65,10 @@ body::before {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+
 	position: absolute;
 	width: 35px;
 	height: 35px;
-	background-color: #e10101;
-	border: none;
-	border-radius: 50%;
-	-webkit-border-radius: 50%;
-	-moz-border-radius: 50%;
-	-ms-border-radius: 50%;
-	-o-border-radius: 50%;
 	top: -15px;
 	left: 50%;
 	transform: translateX(-50%);
@@ -75,6 +76,17 @@ body::before {
 	-moz-transform: translateX(-50%);
 	-ms-transform: translateX(-50%);
 	-o-transform: translateX(-50%);
+
+	background-color: #e10101;
+
+	border: none;
+	border-radius: 50%;
+	-webkit-border-radius: 50%;
+	-moz-border-radius: 50%;
+	-ms-border-radius: 50%;
+	-o-border-radius: 50%;
+
+	cursor: pointer;
 }
 
 .form__menu {
@@ -157,6 +169,7 @@ body::before {
 	margin-bottom: 22px;
 	padding-left: 31px;
 	outline: none;
+	box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.8);
 }
 .form__input:focus {
 	background-color: #d3e6f4;
@@ -166,20 +179,26 @@ body::before {
 	font-weight: 400;
 	color: #5a5b5b;
 	border: 2px solid #b3cbda;
+	transform: translateX(15px);
+	-webkit-transform: translateX(15px);
+	-moz-transform: translateX(15px);
+	-ms-transform: translateX(15px);
+	-o-transform: translateX(15px);
+	width: 485px;
 }
-.form__text {
+.form__input::placeholder {
+	font-family: Roboto;
+	font-size: 16px;
+	line-height: 20px;
+	font-weight: 400;
+	color: #bdbdbd;
+}
+.text {
 	resize: none;
-	width: 500px;
 	height: 147px;
-	border: 2px solid #ebebeb;
-	padding-left: 31px;
 	padding-top: 15px;
-	outline: none;
 }
-.form__text:focus {
-	background-color: #d3e6f4;
-	border: 2px solid #b3cbda;
-}
+
 .form__bottom {
 	padding: 40px 0 83px;
 }
@@ -195,17 +214,28 @@ body::before {
 	margin-right: 20px;
 }
 
-.form__input {
+.form__captcha {
 	width: 320px;
 	height: 40px;
 	border: 2px solid #ebebeb;
 	margin-bottom: 10px;
-}
-.form__input::placeholder {
 	font-size: 16px;
 	line-height: 20px;
 	font-weight: 400;
 	color: #5a5b5b;
+	background-color: #f8f8f8;
+	outline: none;
+}
+.form__captcha:focus {
+	background-color: #d3e6f4;
+	border: 2px solid #b3cbda;
+	transform: translateX(15px);
+	-webkit-transform: translateX(15px);
+	-moz-transform: translateX(15px);
+	-ms-transform: translateX(15px);
+	-o-transform: translateX(15px);
+	width: 305px;
+	margin-right: 20px;
 }
 .form__text-bottom {
 	font-family: Roboto;
@@ -215,6 +245,7 @@ body::before {
 	letter-spacing: 0.04em;
 	color: #82a6bf;
 }
+
 .form__btn-submit {
 	width: 208px;
 	height: 66px;
@@ -236,7 +267,16 @@ body::before {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	cursor: pointer;
+	box-shadow: 0 30px 50px rgba(0, 0, 0, 0.8);
 }
 .form__btn-submit:hover {
 	background-color: #23ceaa;
+	text-shadow: 0 0 15px rgb(23, 31, 150);
+	transition: transform 0.15s, box-shadow 0.15s;
+	box-shadow: 0 30px 50px rgba(0, 0, 0, 0.8);
+	font-weight: bold;
+}
+.form__btn-submit:hover::before {
+	box-shadow: 0 0 0 2px #96154b, 0 0.5em 0 0 #ffe3e2;
 }
